--- a/loader/Makefile
+++ b/loader/Makefile
@@ -4,8 +4,8 @@ top_srcdir = /Volumes/Work/zypher/loader
 top_builddir = /Volumes/Work/zypher/loader
 EGREP = /usr/bin/grep -E
 SED = /usr/bin/sed
-CONFIGURE_COMMAND = './configure' '--enable-zypher' '--with-openssl'
-CONFIGURE_OPTIONS = '--enable-zypher' '--with-openssl'
+CONFIGURE_COMMAND = './configure'
+CONFIGURE_OPTIONS =
 SHLIB_SUFFIX_NAME = dylib
 SHLIB_DL_SUFFIX_NAME = so
 AWK = awk
