--- a/php.ini
+++ b/php.ini
@@ -3,5 +3,8 @@ extension="/Volumes/Work/zypher/loader/modules/zypher.so"
 
 ; Zypher configuration
 zypher.encryption_key="TestKey123"
-zypher.license_path="/Volumes/Work/zypher/licenses/license.key"
 zypher.license_check_enabled=1
+
+[Zypher]
+; Path to the Zypher license file
+zypher.license_path = "/Volumes/Work/zypher/licenses/license.key"
