Fix header paths in Makefile and configure script; add test for Zypher obfuscation support

--- a/loader/Makefile
+++ b/loader/Makefile
@@ -40,7 +40,7 @@ LDFLAGS =
 SHARED_LIBTOOL =
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 SHELL = /bin/sh
-INSTALL_HEADERS = ext/zypher/php_loader.h ext/zypher/src/main.h ext/zypher/src/decrypt.h ext/zypher/src/security.h ext/zypher/src/utils.h
+INSTALL_HEADERS = ext/zypher/src/php_loader.h ext/zypher/src/main.h ext/zypher/src/decrypt.h ext/zypher/src/security.h ext/zypher/src/utils.h
 BUILD_CC = cc
 mkinstalldirs = $(top_srcdir)/build/shtool mkdir -p
 INSTALL = $(top_srcdir)/build/shtool install -c
