Refactor master key handling and improve test suite
- Updated Constants class to retrieve the master key from environment variables, with a fallback to a default value.
- Modified EncoderOptions to initialize the master key using the new method from Constants.
- Adjusted ZypherEncoder to ensure the master key is set correctly during instantiation.
- Removed outdated test files and consolidated tests to focus on core functionality and signature detection.
- Enhanced the test suite to cover various encoding options and error handling scenarios.
- Cleaned up test execution logic and improved output for better clarity during test runs.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,5 +20,6 @@
 
   <php>
     <ini name="memory_limit" value="512M" />
+    <env name="ZYPHER_MASTER_KEY" value="TestSecureKey-PHPUnit-ZypherTest-2025" />
   </php>
 </phpunit>
