Implement debug mode support in Zypher extension with detailed build instructions

--- a/loader/Makefile
+++ b/loader/Makefile
@@ -4,8 +4,8 @@ top_srcdir = /Volumes/Work/zypher/loader
 top_builddir = /Volumes/Work/zypher/loader
 EGREP = /usr/bin/grep -E
 SED = /usr/bin/sed
-CONFIGURE_COMMAND = './configure'
-CONFIGURE_OPTIONS =
+CONFIGURE_COMMAND = './configure' '--with-debug'
+CONFIGURE_OPTIONS = '--with-debug'
 SHLIB_SUFFIX_NAME = dylib
 SHLIB_DL_SUFFIX_NAME = so
 AWK = awk
@@ -23,7 +23,7 @@ prefix = /usr/local/Cellar/php@8.3/8.3.19_1
 phplibdir = /Volumes/Work/zypher/loader/modules
 phpincludedir = /usr/local/Cellar/php@8.3/8.3.19_1/include/php
 CC = cc
-CFLAGS = -g -O2
+CFLAGS = -g -O2 -g -O0
 CFLAGS_CLEAN = $(CFLAGS) -D_GNU_SOURCE
 CPP = cc -E
 CPPFLAGS = -DHAVE_CONFIG_H
