Implement Zypher Opcode Encoder and Loader
- Added `zypher_decrypt.h` and `zypher_decrypt.c` to include deobfuscation functionality for opcode data.
- Introduced `deobfuscate_opcode_data` function to reverse the obfuscation process using a namespace hint.
- Created `encoder.c` to handle serialization of Zend opcodes into a binary format.
- Implemented `export_opcodes_text` for human-readable disassembly of opcodes.
- Added `loader.c` to read binary opcode files, reconstruct Zend opcode arrays, and execute them.
- Developed a main entry point in `main.c` for processing PHP files, serializing opcodes, and generating output files.
- Included error handling and validation for opcode binary formats.
- Added support for generating hexdumps and disassembly files for debugging purposes.
- Created a sample PHP file `input.php` to demonstrate encoding and decoding capabilities.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     zypher:
-        container_name: zypher
+        container_name: zypher-dev
         build:
             context: .
             dockerfile: Dockerfile
